FU-218 - user record refactor, adding endpoint for specific sites